<resources>
    <string name="app_name">Phantom Go</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="black_to_play">Black to play</string>
    <string name="white_to_play">White to play</string>
    <string name="hand_over">Hand over</string>
    <string name="counting">Counting</string>
    <string name="hand_over_title">Hand over</string>
    <string name="play_title">Play</string>
    <string name="settings_title">Settings</string>
    <string name="continue_button">Continue</string>
    <string name="not_your_turn">It’s not your turn.</string>
    <string name="play_button">▶</string>
    <string name="black_button">⚫</string>
    <string name="white_button">⚪</string>
    <string name="eraser_button">×</string>
    <string name="under_construction">This app is under construction.</string>
    <string name="hand_over_text">Two boards of Go on the screen,\ntake one down, pass it around.\nOne less board of Go on the screen.</string>
    <string name="pass_button">Pass</string>
    <string name="result_summary">Black: %d + %d = %d\nWhite: %d + %d = %d</string>
    <string name="finish_button">Done</string>

    <string name="referee_black">Black</string>
    <string name="referee_white">White</string>
    <string name="referee_other_stone">There is already an opponent’s stone.</string>
    <string name="referee_own_stone">There is already an own stone.</string>
    <string name="referee_suicide">Suicide.</string>
    <string name="referee_ko">The ko cannot be captured back immediately.</string>
    <string name="referee_passes">%s passes.</string>
    <string name="referee_to_play">%s to move.</string>
    <string name="referee_atari">%s puts %s in atari.</string>
    <string name="referee_selfatari">%s puts himself in atari.</string>
    <string name="referee_atari_selfatari">%s puts %s and himself in atari.</string>
    <plurals name="referee_capture">
        <item quantity="one">%s captures one stone.</item>
        <item quantity="other">%s captures %d stones.</item>
    </plurals>
    <plurals name="referee_capture_atari">
        <item quantity="one">%s captures one stone and puts %3$s in atari.</item>
        <item quantity="other">%s captures %d stones and puts %s in atari.</item>
    </plurals>
    <plurals name="referee_capture_selfatari">
        <item quantity="one">%s captures one stone and puts himself in atari.</item>
        <item quantity="other">%s captures %d stones and puts himself in atari.</item>
    </plurals>
    <plurals name="referee_capture_atari_selfatari">
        <item quantity="one">%s captures one stone and puts %3$s and himself in atari.</item>
        <item quantity="other">%s captures %d stones and puts %s and himself in atari.</item>
    </plurals>
</resources>
