<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.roland_illig.android.phantomgo.PlayerActivity">

    <de.roland_illig.android.phantomgo.PlayerBoardView
        android:id="@+id/playerBoardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/referee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:maxLines="3"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/passButton"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <RadioGroup
        android:id="@+id/buttonBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <RadioButton
            android:id="@+id/playButton"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:checked="true"
            android:text="@string/play_button"/>

        <RadioButton
            android:id="@+id/blackButton"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:text="@string/black_button"/>

        <RadioButton
            android:id="@+id/whiteButton"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:text="@string/white_button"/>

        <RadioButton
            android:id="@+id/eraserButton"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:text="@string/eraser_button"/>

    </RadioGroup>

    <Button
        android:id="@+id/passButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onPassClick"
        android:text="@string/pass_button"
        app:layout_constraintBottom_toTopOf="@+id/handOverButton"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/handOverButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:enabled="false"
        android:onClick="onHandOverClick"
        android:text="@string/hand_over_title"
        app:layout_constraintBottom_toBottomOf="@id/buttonBar"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>
